# laplace-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  laplace.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/axiom/laplace-axiom/: Cargo.toml
crates/axiom/laplace-axiom/benches/: dpor_bench.rs  dpor_integration_bench.rs  simulation_bench.rs
crates/axiom/laplace-axiom/examples/: quickstart_twin.rs  simple.rs
crates/axiom/laplace-axiom/src/: lib.rs
crates/axiom/laplace-axiom/src/infrastructure/: mod.rs  probe_listener.rs
crates/axiom/laplace-axiom/src/oracle/: mod.rs
crates/axiom/laplace-axiom/src/simulation/: builder.rs  equivalence.rs  facade.rs  hooks.rs  mod.rs  replay_plugin.rs
crates/axiom/laplace-axiom/tests/: concurrency_test.rs  integration_test.rs  simulation_twin_test.rs  twin_integration_test.rs
crates/axiom/laplace-dpor/: Cargo.toml
crates/axiom/laplace-dpor/src/: lib.rs
crates/axiom/laplace-dpor/src/dpor/: classic.rs  classic_proofs.rs  ki_proofs.rs  ki_scheduler.rs  ki_state.rs  mod.rs  runner.rs  schedule.rs  vector_clock.rs  vector_clock_proofs.rs
crates/examples/: ab_ba_deadlock_demo.yaml  ticket_overbooking_blitz.yaml
crates/examples/demo-server/: Cargo.toml
crates/examples/demo-server/src/: main.rs
crates/sdk/laplace-sdk/: Cargo.toml
crates/sdk/laplace-sdk/src/: lib.rs  prelude.rs
crates/shared/laplace-interfaces/: Cargo.toml  build.rs
crates/shared/laplace-interfaces/proto/: context.proto  error.proto
crates/shared/laplace-interfaces/src/: lib.rs
crates/shared/laplace-interfaces/src/abi/: config.rs  mod.rs  primitives.rs  shared.rs
crates/shared/laplace-interfaces/src/domain/: context.rs  kernel.rs  mod.rs  runtime.rs  scheduling.rs  tui.rs
crates/shared/laplace-interfaces/src/domain/entropy/: mod.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/domain/kraken/: mod.rs  types.rs
crates/shared/laplace-interfaces/src/domain/memory/: mod.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/domain/pool/: mod.rs  types.rs
crates/shared/laplace-interfaces/src/domain/quic/: mod.rs
crates/shared/laplace-interfaces/src/domain/resource/: mod.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/domain/scheduler/: mod.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/domain/tenant/: mod.rs  model.rs  tier.rs
crates/shared/laplace-interfaces/src/domain/time/: mod.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/domain/tracing/: mod.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/domain/transport/: error.rs  knul.rs  mod.rs  pluggable.rs  traits.rs  types.rs
crates/shared/laplace-interfaces/src/error/: codes.rs  kraken.rs  mod.rs  tenant.rs  transport.rs
crates/shared/laplace-rpc/: Cargo.toml
crates/shared/laplace-rpc/src/: client.rs  lib.rs  server.rs  tls.rs
crates/verification/laplace-harness/: Cargo.toml
crates/verification/laplace-harness/src/: lib.rs  registry.rs
crates/verification/laplace-harness/src/scenarios/: benchmark.rs  core_resource.rs  entropy.rs  journal.rs  liveness.rs  memory.rs  mod.rs  pool.rs  resource_abba.rs  scheduler.rs  telemetry.rs  template.rs  time.rs  tracing.rs
crates/verification/laplace-macro/: Cargo.toml
crates/verification/laplace-macro/src/: harness.rs  lib.rs  target.rs  tracked_derive.rs  verify.rs
