[package]
name = "laplace-axiom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Laplace Axiom: formal specification and verification contracts"

[lib]
name = "laplace_axiom"
path = "src/lib.rs"

[dependencies]
laplace-core = { path = "../../shared/laplace-core", features = ["twin"] }
laplace-dpor = { path = "../laplace-dpor" }
laplace-probe = { path = "../../probe/laplace-probe" }
laplace-interfaces = { path = "../../shared/laplace-interfaces" }
laplace-macro = { path = "../../verification/laplace-macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { workspace = true }
tracing = "0.1"
quinn  = { version = "0.11", features = ["rustls"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { workspace = true }

[features]
default = ["twin"]
twin = ["laplace-core/twin", "dep:quinn"]
verification = ["laplace-core/verification"]
engine = []
scribe_docs = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[[bench]]
name = "dpor_bench"
harness = false

[[bench]]
name = "dpor_integration_bench"
harness = false

[[bench]]
name = "simulation_bench"
harness = false
