[package]
name = "demo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "demo-server"
path = "src/main.rs"

[dependencies]
axum     = "0.8"
tokio    = { workspace = true }
serde    = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { workspace = true }
laplace-probe = { path = "../../probe/laplace-probe" }
